--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -1,9 +1,22 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+   "Logging": {
+      "LogLevel": {
+         "Default": "Information",
+         "Microsoft.AspNetCore": "Warning"
+      }
+   },
+   "AllowedHosts": "*",
+   "Authentication": {
+      "DefaultScheme": "JwtBearer",
+      "Schemes": {
+         "JwtBearer": {
+            "Audiences": [
+               "http://localhost:5264",
+               "https://localhost:7048",
+               "http://localhost:3000"
+            ],
+            "ClaimsIssuer": "user-jwt-here"
+         }
+      }
+   }
 }
