--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "formik": "^2.4.3",
+    "jwt-decode": "^3.1.2",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6",
+    "universal-cookie": "^4.0.4",
     "yup": "^1.2.0"
   }
 }
