--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "@types/react-dom": "18.2.7",
     "formik": "^2.4.3",
     "jwt-decode": "^3.1.2",
-    "next": "13.4.12",
+    "next": "^13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6",
