--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "cookies-next": "^2.1.2",
     "formik": "^2.4.3",
     "jwt-decode": "^3.1.2",
     "next": "^13.4.13",
