--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.5.0",
     "cookies-next": "^2.1.2",
     "formik": "^2.4.3",
     "jwt-decode": "^3.1.2",
     "next": "^13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "strava-v3": "^2.2.0",
     "typescript": "5.1.6",
     "universal-cookie": "^4.0.4",
     "yup": "^1.2.0"
