--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.3",
     "jwt-decode": "^3.1.2",
     "next": "^13.4.13",
+    "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "supports-color": "^9.4.0",
