--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,17 @@
     "debug": "^4.3.4",
     "formik": "^2.4.3",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.4",
     "next": "^13.4.13",
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "supports-color": "^9.4.0",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.7"
   }
 }
