--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@canvasjs/react-charts": "^1.0.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
@@ -28,6 +29,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/canvasjs": "^1.9.10",
     "@types/leaflet": "^1.9.7"
   }
 }
