--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "supports-color": "^9.4.0",
     "typescript": "5.1.6",
